# NES_Spins

./: README.md  TORIC_SAMPLER_UPGRADE.md  VIT_UPGRADE.md  pyproject.toml  requirements.txt
notebooks/: 01_test_references.ipynb  02_train_sampled_nes.ipynb  03_plot_results.ipynb  04_compare_models.ipynb  05_toric_code.ipynb  06_vit_nes.ipynb  07_toric_sampler.ipynb  07_toric_sr_variance.ipynb  08_ResFFN.ipynb
results/: debug_toric_2x2_k1_vit_gradientcheck.json  debug_toric_2x2_k1_vit_singleflips.json  sampled_nes_1d_tfim_L10_k2_ffn.json  sampled_nes_2d_heisenberg_4x4_k2_rbm.json  sampled_nes_2d_tfim_4x4_k2_cnn.json  sampled_nes_2d_tfim_4x4_k2_rbm.json  sampled_nes_2d_tfim_5x5_k2_rbm.json  sampled_nes_tfim_2x2_k2_vit.json  sampled_nes_tfim_4x4_k2_vit.json  sampled_nes_toric_2x2_k2_vit_toricmoves.json  sampled_nes_toric_2x2_k4_cnn_toricmoves.json  sampled_nes_toric_2x2_k4_ffn.json  sampled_nes_toric_2x2_k4_rbm_toricmoves.json  sampled_nes_toric_2x2_k4_vit_toricmoves.json  sampled_nes_toric_2x2_k5_cnn.json  sampled_nes_toric_3x3_k4_cnn.json  sampled_nes_toric_4x4_k1_vit.json  sampled_nes_toric_4x4_k1_vit_toricmoves.json  sampled_nes_toric_4x4_k2_vit.json  sampled_nes_toric_4x4_k2_vit_toricmoves.json  sampled_nes_toric_4x4_k4_ffn_toricmoves.json  sampled_nes_toric_4x4_k4_rbm_toricmoves.json  sampled_nes_toric_4x4_k4_resffn_toricmoves.json  sampled_nes_toric_4x4_k4_vit_toricmoves.json  sampled_nes_toric_4x4_k5_cnn.json  sampled_nes_toric_4x4_k5_ffn.json  sampled_nes_toric_4x4_k5_rbm_h64.json  sampled_nes_toric_4x4_k5_rbm_toricmoves.json  sampled_nes_toric_4x4_k5_vit.json
(+30 files in other folders)
